--- a/scholarlywork.html
+++ b/scholarlywork.html
@@ -187,11 +187,12 @@
            </p>
             </div>
             <div id="footer">
-                <div align="center">
-                    <a href="http://math.asu.edu"><img alt="ASU-SoMSS" src="1_Images/asu_math_logo_white.png" style="width: 318px; height: 85px;" class="noborder" /></a>
-                    <br /> © 2018 Neil Hatfield
-                    <br />
-                </div>
+          <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
+                src="1_Images/psu_mark.jpg"
+                class="noborder"
+                style="width: 318px; height: 85px;" /></a><br />
+            © 2019 Neil Hatfield <br />
+          </div>
             </div>
         </div>
     </div>
