--- a/teaching.html
+++ b/teaching.html
@@ -140,11 +140,11 @@
           <h3>Fall 2013: Pathways Pre-calculus (ASU) </h3>
         </div>
         <div id="footer">
-          <div align="center"><a href="http://math.asu.edu"><img border="0" style="width: 318px; height: 85px;"
+          <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
+                src="1_Images/psu_mark.jpg"
                 class="noborder"
-                src="1_Images/asu_math_logo_white.png"
-                alt="ASU-SoMSS" /></a><br />
-            © 2018 Neil Hatfield <br />
+                style="width: 318px; height: 85px;" /></a><br />
+            © 2019 Neil Hatfield <br />
           </div>
         </div>
       </div>
