Update to teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -25,28 +25,17 @@
           <ul id="subnav">
             <li>Subnav:</li>
             <li><a href="#current"><em>Current Courses</em></a></li>
+            <li><a href="#applets"><em>Teaching Applets</em></a></li>
             <li><a href="#past"><em>Past Courses</em></a></li>
           </ul>
         </div>
         <div id="contentnobars">
           <h2 id="current"><a name="current"></a>Current Courses<br />
           </h2>
-          <h3>STP 226-Elements of Statistics</h3>
-          <h3>STP 231-Statistics for the Biosciences</h3>
-          <h3>STP 420-Introductory Applied Statistics</h3>
-          <p>These courses all serve as an introductory course to Statistics.  As is my trend in teaching statistics courses, this course focuses on integrating technology as
-            well as modern approaches to Statistics.  Students leaving this
-            course will have a solid foundation of core concepts in Statistics
-            that will serve them well in later courses.  Students will work in
-            groups to complete a semester long Data Analysis Project so that
-            they have experience putting what they learn into practice, using
-            real world data. </p>
-          <p>The course websites may be accessed here: <a class="bodylinks" target="_blank"
-              href="https://mathcms.asu.edu/IMathAS">iMathAS</a></p>
-          <p>For this course, students will need to download and install JMP 13
-            Pro from MyApps (part of My ASU).</p>
-          <p>Additionally, students will need to access the following online
-            applets throughout the semester:</p>
+          <p>I'm not teaching any courses in Fall 2019.</p>
+          <br />
+          <h2 id="applets"><a name="applets"></a>Teaching Applets<br /></h2>
+          <p>The following are applets that I use in my teaching:</p>
           <ul>
             <li><a class="bodylinks" target="_blank" href="statApps/Day1Activity.html">Alternative
                 First Day Activity</a></li>
@@ -64,65 +53,32 @@
           <br />
           <h2 id="past"><a name="past"></a>Past Courses<br />
           </h2>
-          <h3>STP 226-Elements of Statistics</h3>
-          <p>This course serves as an introductory course to Statistics. This
-            course is open to students in any major. As is my trend in teaching
-            statistics courses, this course focuses on integrating technology as
+          <h3>University of Northern Colorado</h3>
+          <h4>MATH 550: Applied Probability and Statistics-Summer 2019</h4>
+          <h4>MED 701: Quantitative Methods in Mathematics Education-Spring 2019</h4>
+          <h4>STAT 150: Introduction to Statistics-Spring 2019</h4>
+          <h4>MATH 550: Applied Probability and Statistics-Fall 2019</h4>
+          <h4>STAT 150: Introduction to Statistics-Fall 2019</h4>
+          <h3>Arizona State University</h3>
+          <h4>STP 226: Elements of Statistics-Spring 2018</h4>
+          <h4>STP 231: Statistics for the Biosciences-Spring 2018</h4>
+          <h4>STP 420:Introductory Applied Statistics-Spring 2018</h4>
+          <p>These courses all serve as an introductory course to Statistics.  As is my trend in teaching statistics courses, this course focuses on integrating technology as
             well as modern approaches to Statistics.  Students leaving this
             course will have a solid foundation of core concepts in Statistics
             that will serve them well in later courses.  Students will work in
             groups to complete a semester long Data Analysis Project so that
             they have experience putting what they learn into practice, using
             real world data. </p>
-            <h3>MAT 210-Brief Calculus</h3>
+          <h4>STP 226: Elements of Statistics-Fall 2017, In-person</h4>
+          <h4>STP 226: Elements of Statistics-Fall 2017, Online</h4>
+          <h4>MAT 210: Brief Calculus-Fall 2017</h4>
           <p>Brief Calculus, also known as Business Calculus, serves as a first
             course in a calculus sequence that focuses on applications of the
-            core ideas in calculus in the business world. The course site may be
-            accessed through BlackBoard.</p>
-          <h3>STP 420-Introductory Applied Statistics</h3>
-          <p>This course serves as an upper division, introductory course. I
-            have the pleasure of redesigning this course for the school.
-            Students will use software throughout the semester (specifically,
-            JMP Pro) as they wrestle with the various concepts.</p>
-          <p>The course website can be accessed here: <a class="bodylinks" target="_blank"
-              href="https://imathas.rationalreasoning.net">iMathAS</a>.</p>
-          <h3>STP 231-Statistics for the Biosciences</h3>
-          <p>This course is the required introduction to statistics for all life
-            science majors at ASU. In this course we will take a hands-on
-            approach to the foundational ideas of Statistics.  Students will
-            work in groups to complete an Exploratory Data Analysis project so
-            that they may learn first-hand just a few of the intricacies of
-            doing Statistics.</p>
-          <p>For this course, students will need to download JMP (JMP Pro) from
-            MyApps (part of MyASU) or R/RStudio. Additional information about
-            the course is in the <a class="bodylinks" href="STP231-Syllabus-F16-Hatfield.pdf">syllabus</a>.</p>
-          <p>The course website can be accessed here: <a class="bodylinks" target="_blank"
-              href="imathas.rationalreasoning.net">iMathAS</a>.</p>
-          <p>Additionally, students in STP231 will need to use the following
-            pages:</p>
-          <ul>
-            <li><a class="bodylinks" target="_blank" href="FishSampling.html">Fish
-                Sampling</a> (Web App)</li>
-            <li><a class="bodylinks" href="PeopleSamplingWeb.html" target="_blank">People
-                Sampling</a> (Web App)</li>
-            <li><a class="bodylinks" target="_blank" href="CPF/CPF.html">CPF
-                Calculator</a> (Page)</li>
-            <li><a class="bodylinks" target="_blank" href="restricted/F16FinalExam.html">Final
-                Exam</a> (Restricted Access)</li>
-          </ul>
-          <p>Additional resources will be published to this page as the semester
-            continues.</p>
-          <p>This course section focuses on students building productive
-            meanings for the core ideas of Statistics. In particular, I've
-            designed this course so that students develop the view that
-            statistics are functions of data which provide measures of a data
-            collection's attributes. This approach puts quantitative reasoning
-            as a core component; students must engage in quantification.
-            Additionally, this course provides a rigorous treatment of the idea
-            of distribution which underpins all of statistical inference. </p>
-          <h3></h3>
-          <h3>Summer 2016B: Pre-calculus (ASU)</h3>
-          <h3>Summer 2016A: Pre-calculus (ASU)</h3>
+            core ideas in calculus in the business world.</p>
+          <h4>STP 420: Introductory Applied Statistics-Spring 2017</h4>
+          <h4>STP 231: Statistics for the Biosciences-Fall 2016</h4>
+          <h4>MAT170: Pre-calculus-Summer 2016A, B</h4>
           <p>The Summer 2016 Pre-calculus courses are the products of
             redesigning a research-based curriculum (Pathways to Precalculus) to
             emphasize co-variational and quantitative reasoning. During this
@@ -133,11 +89,10 @@
             and average-rate-of-change. Students learned how using this last
             tool could enable them to categorize different types of co-variation
             and build mathematical models that describe that co-variation.</p>
-          <h3>Spring 2016: Statistics for the Biosciences (ASU)</h3>
-          <h3>Fall 2015: Teaching Associate for the graduate level Research in
-            Undergraduate Mathematics Education I course (ASU)</h3>
-          <h3>Spring 2014: Statistics for the Biosciences (ASU)</h3>
-          <h3>Fall 2013: Pathways Pre-calculus (ASU) </h3>
+          <h4>STP 231: Statistics for the Biosciences-Spring 2016</h4>
+          <h4>MTE 598: Research in Undergraduate Mathematics Education I-Fall 2015, Grad TA</h4>
+          <h4>STP 231: Statistics for the Biosciences-Spring 2014</h4>
+          <h4>MAT170: Pathways Pre-calculus-Fall 2013 </h4>
         </div>
         <div id="footer">
           <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
