--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en-us" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" dir="ltr">  <head>    <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />    <title>Neil J. Hatfield</title>    <link media="screen,projection" type="text/css" href="1_Scripts/neil.css" rel="stylesheet" />    <meta name="author" content="Neil J. Hatfield" />    <meta name="keywords" content="Neil Hatfield" />  </head>  <body>    <div id="wrapper">      <div id="innerwrapper">        <div id="header">          <div align="center"><img style="width: 200px; height: 276px;" src="1_Images/hatfield.jpg"              alt="neilh"              class="noborder" /></div>          <h1 style="text-align: center;">Neil J. Hatfield</h1>          <ul id="nav">            <li><a href="index.html" class="active"><em>About Me</em></a></li>            <li><a href="scholarlywork.html"><em>Scholarly Work</em></a></li>            <li><a href="teaching.html"><em>Teaching</em></a></li>            <li><a href="researchinterests.html"><em>Research Interests</em></a></li>            <li><a href="additional.html"><em>Additional Resources</em></a></li>            <li><a href="linkscontact.html"><em>Links/Contact</em></a></li>          </ul>        </div>        <div id="contentnobars">          <h2>Welcome</h2>          <h3>6/27/19: Please pardon the mess as I update my pages</h3>          <p>I am an assistant research professor with the Department of Statistics at Pennsylvania State University's Eberly College of Science. My research passion lies within the realm of Statistics Education.            This field is relatively young and is full of opportunities for            understanding how individuals think about concepts in Statistics. My            dissertation work focused on students' understanding of stochastic            processes as they develop a conception of a stochastic variable's            distribution. </p>          <p>Prior to joining Penn State, I worked at the University of Northern Colorado as a Visiting Assistant Professor of Mathematics and as an Instructor for Arizona State University.</p>          <br />          <h2>Curriculum Vitae</h2>          <h3>Current Employment: Pennsylvannia State University <br/> University of Northern Colorado</h3>          <br />          <b>Education: <br />          </b>          <table cellspacing="5" cellpadding="5" border="0" style="width: 810px; height: 160px;">            <tbody>              <tr style="text-align: left;">                <td> Arizona State University<br />                  Tempe, AZ </td>                <td> Ph.D. in Mathematics Education<br />                  Conferred May 2019</td>              </tr>              <tr style="text-align: left;">                <td style="width: 394.567px;"> Northwest Missouri State                  University<br />                  Maryville, MO </td>                <td style="width: 400.433px;"> M.S.Ed. in Mathematics Education<br />                  Conferred April 2011 </td>              </tr>              <tr style="text-align: left;">                <td> Doane University (formerly Doane College)<br />                  Crete, NE </td>                <td> Bachelor of Science<br />                  Conferred May 2009 </td>              </tr>            </tbody>          </table>          <br />          <div align="center"><big><a class="bodylinks" href="1_Resources/CV_Redacted.pdf">Curriculum                Vitae</a><br />              <br />              <a class="bodylinks" href="1_Resources/Philosophy.pdf">Teaching                Philosophy</a><br />              <br />              <a class="bodylinks" href="1_Resources/statement.pdf">Statement of                Education and Career Goals</a></big><br />            <br />          </div>          <h3>Statistical Consulting</h3>          <ul>            <li><span style="font-family: Veranda;">Awhatukee Foothills Concert                Band--Membership Survey 2017<br />                Assisted in the generation of a survey that was then deployed to                the 2016-2017 membership of the AFCB and then analyzed the                results using common approaches as well as Latent Semantic                Analysis for analyzing open-ended survey items. <br />              </span></li>            <li><span style="font-family: Veranda;">Project CoMPASS--Flowing                Wells School District, Fall 2015–Spring 2016<br />                Conducted an analysis of the results from the Mathematical                Meanings for Teaching Secondary Mathematics Instrument to                evaluate the project's professional development intervention. <br />              </span></li>            <li><span style=" font-family: Veranda;">TUSD MSP High School                Mathematics Project--Tucson Unified School District &amp;                University of Arizona, Fall 2014–Summer 2015<br />              </span><span style="font-family: Veranda;">Conducted an analysis                of the results from the Mathematical Meanings for Teaching                Secondary Mathematics Instrument to evaluate the project's                professional development intervention.</span></li>            <li><span style=" font-family: Veranda;">Functions and Models:                Connecting Content, Standards, and Pedagogy--Northern Arizona                State University, Fall 2014–Summer 2015</span><br />              <span style="font-family: Veranda;">Conducted an analysis of the                results from the Mathematical Meanings for Teaching Secondary                Mathematics Instrument to evaluate the project's professional                development intervention.</span></li>            <li><span style=" font-family: Veranda;">Eggleston, M. J. (in                progress). A dissertation on conservation of resources and                psychological first aid with trauma survivors in the Phoenix                metropolitan area. Northcentral University, Ph.D. in Psychology.</span></li>            <li><span style="  font-family: Veranda;">Ramella, K.  (in                progress). A dissertation on the resiliency of firefighters in                the Phoenix metropolitan area in light of the firefighters'                positive and negative affect. Northcentral University, Ph.D. in                Psychology.</span></li>            <li><span style="   font-family: Veranda;"></span><span style="    font-family: Veranda;">Rembecki,                A. (2013). Action research paper on improving sight-singing                ability through the use of barbershop tags during instruction.                Northwest Missouri State University, M.S.Ed-Music.</span></li>            <li><span style="   font-family: Veranda;">Sullivan, B. (2012).                Evaluating the validity of the school motivation and learning                strategies inventory for english language learners. (Order No.                3511197, Walden University). ProQuest Dissertations and Theses,                199. Retrieved from                http://login.ezproxy1.lib.asu.edu/login?url=http://search.proquest.com/docview/1022498455?accountid=4485.                (1022498455), Ph.D. in Psychology.</span></li>            <li><span style="     font-family: Veranda;">Dollins, S. (2012).                Action research paper on differences in sight-singing methods                for gains in sight-singing ability. Northwest Missouri State                University, M.S.Ed-Music.<br />              </span></li>          </ul>        </div>        <div id="footer">          <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"                src="1_Images/psu_mark.jpg"                class="noborder"                style="width: 318px; height: 85px;" /></a><br />            © 2019 Neil Hatfield <br />          </div>        </div>      </div>    </div>  </body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en-us" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" dir="ltr">
+  <head>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
+    <title>Neil J. Hatfield</title>
+    <link media="screen,projection" type="text/css" href="1_Scripts/neil.css" rel="stylesheet" />
+    <meta name="author" content="Neil J. Hatfield" />
+    <meta name="keywords" content="Neil Hatfield" />
+  </head>
+  <body>
+    <div id="wrapper">
+      <div id="innerwrapper">
+        <div id="header">
+          <div align="center"><img style="width: 200px; height: 276px;" src="1_Images/hatfield.jpg"
+              alt="neilh"
+              class="noborder" /></div>
+          <h1 style="text-align: center;">Neil J. Hatfield</h1>
+          <ul id="nav">
+            <li><a href="index.html" class="active"><em>About Me</em></a></li>
+            <li><a href="scholarlywork.html"><em>Scholarly Work</em></a></li>
+            <li><a href="teaching.html"><em>Teaching</em></a></li>
+            <li><a href="linkscontact.html"><em>Links/Contact</em></a></li>
+          </ul>
+        </div>
+        <div id="contentnobars">
+          <h2>Welcome</h2>
+          <h3>8/13/19: Please pardon the mess as I update my pages</h3>
+          <p>I am an assistant research professor with the Department of Statistics at Pennsylvania State University's Eberly College of Science. My research passion lies within the realm of Statistics Education. This field is relatively young and is full of opportunities for understanding how individuals think about concepts in Statistics. My
+            dissertation work focused on students' understanding of stochastic processes as they develop a conception of a stochastic variable's distribution. </p>
+          <p>Prior to joining Penn State, I worked at the University of Northern Colorado as a Visiting Assistant Professor of Mathematics and as an Instructor for Arizona State University.</p>
+          <br />
+          <h2>Curriculum Vitae</h2>
+          <h3>Current Employment: Pennsylvannia State University</h3>
+          <br />
+          <b>Education: <br />
+          </b>
+          <table cellspacing="5" cellpadding="5" border="0" style="width: 810px; height: 160px;">
+            <tbody>
+              <tr style="text-align: left;">
+                <td> Arizona State University<br />
+                  Tempe, AZ </td>
+                <td> Ph.D. in Mathematics Education<br />
+                  Conferred May 2019</td>
+              </tr>
+              <tr style="text-align: left;">
+                <td style="width: 394.567px;"> Northwest Missouri State
+                  University<br />
+                  Maryville, MO </td>
+                <td style="width: 400.433px;"> M.S.Ed. in Mathematics Education<br />
+                  Conferred April 2011 </td>
+              </tr>
+              <tr style="text-align: left;">
+                <td> Doane University (formerly Doane College)<br />
+                  Crete, NE </td>
+                <td> Bachelor of Science<br />
+                  Conferred May 2009 </td>
+              </tr>
+            </tbody>
+          </table>
+          <br />
+          <div align="center"><big><a class="bodylinks" href="1_Resources/CV_Redacted.pdf">Curriculum
+                Vitae</a><br />
+              <br />
+              <a class="bodylinks" href="1_Resources/Philosophy.pdf">Teaching
+                Philosophy</a><br />
+              <br />
+              <a class="bodylinks" href="1_Resources/statement.pdf">Statement of
+                Education and Career Goals</a></big><br />
+            <br />
+          </div>
+          <h3>Statistical Consulting</h3>
+          <ul>
+            <li><span style="font-family: Veranda;">Awhatukee Foothills Concert
+                Band--Membership Survey 2017<br />
+                Assisted in the generation of a survey that was then deployed to
+                the 2016-2017 membership of the AFCB and then analyzed the
+                results using common approaches as well as Latent Semantic
+                Analysis for analyzing open-ended survey items. <br />
+              </span></li>
+            <li><span style="font-family: Veranda;">Project CoMPASS--Flowing
+                Wells School District, Fall 2015–Spring 2016<br />
+                Conducted an analysis of the results from the Mathematical
+                Meanings for Teaching Secondary Mathematics Instrument to
+                evaluate the project's professional development intervention. <br />
+              </span></li>
+            <li><span style=" font-family: Veranda;">TUSD MSP High School
+                Mathematics Project--Tucson Unified School District &amp;
+                University of Arizona, Fall 2014–Summer 2015<br />
+              </span><span style="font-family: Veranda;">Conducted an analysis
+                of the results from the Mathematical Meanings for Teaching
+                Secondary Mathematics Instrument to evaluate the project's
+                professional development intervention.</span></li>
+            <li><span style=" font-family: Veranda;">Functions and Models:
+                Connecting Content, Standards, and Pedagogy--Northern Arizona
+                State University, Fall 2014–Summer 2015</span><br />
+              <span style="font-family: Veranda;">Conducted an analysis of the
+                results from the Mathematical Meanings for Teaching Secondary
+                Mathematics Instrument to evaluate the project's professional
+                development intervention.</span></li>
+            <li><span style=" font-family: Veranda;">Eggleston, M. J. (in
+                progress). A dissertation on conservation of resources and
+                psychological first aid with trauma survivors in the Phoenix
+                metropolitan area. Northcentral University, Ph.D. in Psychology.</span></li>
+            <li><span style="  font-family: Veranda;">Ramella, K.  (in
+                progress). A dissertation on the resiliency of firefighters in
+                the Phoenix metropolitan area in light of the firefighters'
+                positive and negative affect. Northcentral University, Ph.D. in
+                Psychology.</span></li>
+            <li><span style="   font-family: Veranda;"></span><span style="    font-family: Veranda;">Rembecki,
+                A. (2013). Action research paper on improving sight-singing
+                ability through the use of barbershop tags during instruction.
+                Northwest Missouri State University, M.S.Ed-Music.</span></li>
+            <li><span style="   font-family: Veranda;">Sullivan, B. (2012).
+                Evaluating the validity of the school motivation and learning
+                strategies inventory for english language learners. (Order No.
+                3511197, Walden University). ProQuest Dissertations and Theses,
+                199. Retrieved from
+                http://login.ezproxy1.lib.asu.edu/login?url=http://search.proquest.com/docview/1022498455?accountid=4485.
+                (1022498455), Ph.D. in Psychology.</span></li>
+            <li><span style="     font-family: Veranda;">Dollins, S. (2012).
+                Action research paper on differences in sight-singing methods
+                for gains in sight-singing ability. Northwest Missouri State
+                University, M.S.Ed-Music.<br />
+              </span></li>
+          </ul>
+        </div>
+        <div id="footer">
+          <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
+                src="1_Images/psu_mark.jpg"
+                class="noborder"
+                style="width: 318px; height: 85px;" /></a><br />
+            © 2019 Neil Hatfield <br />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
