--- a/scholarlywork.html
+++ b/scholarlywork.html
@@ -19,15 +19,13 @@
                     <li><a href="index.html"><em>About Me</em></a></li>
                     <li><a href="scholarlywork.html" class="active"><em>Scholarly Work</em></a></li>
                     <li><a href="teaching.html"><em>Teaching</em></a></li>
-                    <li><a href="researchinterests.html"><em>Research Interests</em></a></li>
-                    <li><a href="additional.html"><em>Additional Resources</em></a></li>
                     <li><a href="linkscontact.html"><em>Links/Contact</em></a></li>
                 </ul>
             </div>
             <div id="contentnobars">
                 <h2 id="Publications"><a name="Publications"></a>Publications<br />
           </h2>
-                <p>Hatfield, N. J. (Accepted, 2018). Students' conveyed meanings for probability. Proceedings of the Tenth International Conference on Teaching Statistics. Kyoto, Japan.</p>
+                <p>Hatfield, N. J. (2018). Students' conveyed meanings for probability. Proceedings of the Tenth International Conference on Teaching Statistics. Kyoto, Japan.</p>
                 <p>Thompson, P. W., Hatfield, N. J., Yoon, H., Joshua, S., and Byerley, C. (2017). Covariational reasoning among U.S. and South Korean secondary mathematics teachers. <em>Journal of Mathematical
               Behavior</em>, 48, pp. 95-111.</p>
                 <p>Hatfield, N. J. (2016). An initial look at students' conveyed meanings for probability. In T. Fukawa-Connelly, N. Infante, M. Wawro, &amp; S. Brown (Eds.), <em>Proceedings of the 19th Annual
@@ -54,11 +52,15 @@
               Mathematics Education</em> (pp. 358–363). Portland, Oregon: Mathematical Association of America. </p>
                 <h2 id="Presentations"><a name="Presentations"></a>Presentations<br />
           </h2>
-                <h3>International Conference on Teaching Statistics--July 2018--Kyoto, Japan</h3>
-                Hatfield, N. J. (Accepted, July 2018).<br />
-                Students' Conveyed ZMeanings for Probability.<br />
+                <h3>The United States Conference on Teaching Statistics--May 2019--State College, PA</h3>
+                Hatfield, N. J. (May 2019).<br />
+                Students' Images of Randomness Post-Instruction.<br />
                 <br />
-                Hatfield, N. J. (Invited, July 2018).<br />
+                <h3>International Conference on Teaching Statistics--July 2018--Kyoto, Japan</h3>
+                Hatfield, N. J. (July 2018).<br />
+                Students' Conveyed Meanings for Probability.<br />
+                <br />
+                Hatfield, N. J. (July 2018).<br />
                 The Challenges of Teaching Probability, Session Chair<br />
                 <br />
                 <h3>ASU University Academic Success Programs--September 2017--Tempe, AZ</h3>
@@ -111,7 +113,6 @@
                 <br />
                 <br /> Byerley, C., Hatfield, N. J., Carlson, M., &amp; Thompson, P. W. (2013).
                 <br /> Assessing High School Teachers' Mathematical Meanings for Teaching Secondary Mathematics
-                <br />
                 <br />
                 <br />
                 <h3>AMS Sectional Meeting--March 31, 2012--Lawrence, KS</h3> Thompson, P. W., Hatfield, N. J., &amp; Byerley, C. (2012).
@@ -171,19 +172,19 @@
                 <h2 id="Applets"><a name="Applets"></a>Applets and Programs<br />
           </h2>
            <p>
-               Hatfield, N. J. (2018) StatsTools, v. 3. [JMP Add-In]. A suite of tools to extend JMP’s capabilities by including an ANOVA Screens tool, an effect size calculator, and support for students.<br />
+               Hatfield, N. J. (2019) StatsTools, v. 4. [JMP Add-In]. A suite of tools to extend JMP’s capabilities by including an ANOVA Screens tool, an effect size calculator, and support for students.<br />
                <br />
-                Hatfield, N. J. (2017). First Day Activity. An applet for students to explore a simulated outbreak and develop a need for data and statistics. Available: <a href="https://mathpost.asu.edu/~neil/statApps/Day1Activity.html" target="_blank" class="bodylinks">https://mathpost.asu.edu/~neil/statApps/Day1Activity.html</a> <br />
+                Hatfield, N. J. (2017). First Day Activity. An applet for students to explore a simulated outbreak and develop a need for data and statistics. Available: <a href="https://neilhatfield.github.io/statApps/Day1Activity.html" target="_blank" class="bodylinks">https://neilhatfield.github.io/statApps/Day1Activity.html</a> <br />
                 <br />
-                Hatfield, N. J. (2017). Four Rooms. An applet designed to help students explore the differences between deterministic and stochastic processes. Available: <a href="https://mathpost.asu.edu/~neil/statApps/FourRooms.html" target="_blank" class="bodylinks">https://mathpost.asu.edu/~neil/statApps/FourRooms.html</a> <br />
+                Hatfield, N. J. (2017). Four Rooms. An applet designed to help students explore the differences between deterministic and stochastic processes. Available: <a href="https://neilhatfield.github.io/statApps/FourRooms.html" target="_blank" class="bodylinks">https://neilhatfield.github.io/statApps/FourRooms.html</a> <br />
                 <br />
-                Hatfield, N. J. (2017). Sequences 1. An applet for students to explore checking a sequence for the appearance of randomness. Available: <a href="https://mathpost.asu.edu/~neil/statApps/Sequences.html" target="_blank" class="bodylinks">https://mathpost.asu.edu/~neil/statApps/Sequences.html</a> <br />
+                Hatfield, N. J. (2017). Sequences 1. An applet for students to explore checking a sequence for the appearance of randomness. Available: <a href="https://neilhatfield.github.io/statApps/Sequences.html" target="_blank" class="bodylinks">https://neilhatfield.github.io/statApps/Sequences.html</a> <br />
                 <br />
-                Hatfield, N. J. (2017). Fish Sampling. An applet to allow students to explore several basic sampling methods. Available: <a href="https://mathpost.asu.edu/~neil/statApps/FishSampling.html" target="_blank" class="bodylinks">https://mathpost.asu.edu/~neil/statApps/FishSampling.html</a> <br />
+                Hatfield, N. J. (2017). Fish Sampling. An applet to allow students to explore several basic sampling methods. Available: <a href="https://neilhatfield.github.io/statApps/FishSampling.html" target="_blank" class="bodylinks">https://neilhatfield.github.io/statApps/FishSampling.html</a> <br />
                 <br />
-                Hatfield, N. J. (2017). People Sampling. An applet to allow students to explore simple random sampling based off of the 2010 Census data for the USA. Available: <a href="https://mathpost.asu.edu/~neil/statApps/PeopleSamplingWeb.html" target="_blank" class="bodylinks">https://mathpost.asu.edu/~neil/statApps/PeopleSamplingWeb.html</a> <br />
+                Hatfield, N. J. (2017). People Sampling. An applet to allow students to explore simple random sampling based off of the 2010 Census data for the USA. Available: <a href="https://neilhatfield.github.io/statApps/PeopleSamplingWeb.html" target="_blank" class="bodylinks">https://neilhatfield.github.io/statApps/PeopleSamplingWeb.html</a> <br />
                 <br />
-                Hatfield, N. J. and Sander, G. (2017). StatCalc. An online calculator for calculating cumulative probabilities from common named distributions. Available: <a href="https://mathpost.asu.edu/~neil/statCalc/statcalc.html" target="_blank" class="bodylinks">https://mathpost.asu.edu/~neil/statCalc/statcalc.html</a> <br />
+                Hatfield, N. J. and Sander, G. (2017). StatCalc. An online calculator for calculating cumulative probabilities from common named distributions. Available: <a href="https://neilhatfield.github.io/statCalc/statcalc.html" target="_blank" class="bodylinks">https://neilhatfield.github.io/statCalc/statcalc.html</a> <br />
            </p>
             </div>
             <div id="footer">
