--- a/linkscontact.html
+++ b/linkscontact.html
@@ -1,1 +1,71 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en-us" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" dir="ltr">  <head>    <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />    <title>Hatfield's Contact</title>    <link media="screen,projection" type="text/css" href="1_Scripts/neil.css" rel="stylesheet" />    <meta name="author" content="Neil Hatfield" />    <script type="text/x-mathjax-config">  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});    </script>    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> <meta content="Neil Hatfield" name="keywords" />  </head>  <body>    <div id="wrapper">      <div id="innerwrapper">        <div id="header">          <div align="center"><img class="noborder" alt="neilh" src="1_Images/hatfield.jpg"              style="width: 200px; height: 276px;" /></div>          <h1 style="text-align: center;">Neil J. Hatfield</h1>          <ul id="nav">            <li><a href="index.html"><em>About Me</em></a></li>            <li><a href="scholarlywork.html"><em>Scholarly Work</em></a></li>            <li><a href="teaching.html"><em>Teaching</em></a></li>            <li><a href="researchinterests.html"><em>Research Interests</em></a></li>            <li><a href="additional.html"><em>Additional Resources</em></a></li>            <li><a class="active" href="linkscontact.html"><em>Links/Contact</em></a></li>          </ul>        </div>        <div id="contentnobars">          <h2 id="Intro"><a name="links"></a><a href="#">Links</a></h2>          <p>Below are some websites that I have found to be particularly useful            at one time or another.  Please enjoy.<br />          </p>          <p><a href="http://www.mathwords.com/" class="bodylinks">Mathwords:              Terms and Formulas from Beginning Algebra to Calculus</a><br />            Bruce Simmons (2011).  A great website for looking up mathematical            terms and formulas<br />          </p>          <p><a href="http://www.mathsisfun.com/definitions/index.html" class="bodylinks">Illustrated              Mathematics Dictionary</a><br />            Rod Pierce (2012).  A website for looking up mathematics terms.<br />          </p>          <p><a href="http://nlvm.usu.edu/en/nav/category_g_4_t_2.html" class="bodylinks">National              Library of Virtual Manipulatives</a><br />            Utah State University (2010).  A site for online manipulatives.<br />          </p>          <p><a href="http://www.dessci.com/" class="bodylinks">MathType</a><br />            Design Science (2012).  They have a wonderful tool for writing            equations in Microsoft Word and PowerPoint that is easier to use            than Equation Editor.<br />          </p>          <p><a href="http://www.latex-project.org/ftp.html" class="bodylinks">LaTeX</a><br />            A great tool in preparing documents with embedded mathematics.<br />          </p>          <p><a href="http://www.pacifict.com/Products.html" class="bodylinks">Graphing              Calculator</a><br />            Pacific Tech.  This is a wonderfully powerful tool for creating            diadatic objects in mathematics classrooms.<br />          </p>          <p><a href="http://mathworld.wolfram.com/" class="bodylinks">Wolfram              Math World</a><br />            Eric W. Weisstein (2012). A constantly evolving mathematics            resource.<br />          </p>          <p><a href="http://asu.edu/" class="bodylinks">Arizona State              University</a><br />            A public, R1 university located in Tempe, AZ, that offers a wide            variety of undergraduate and graduate programs.  This is where I'm            currently working on my PhD.<br />          </p>          <p><a href="http://www.nwmissouri.edu/" class="bodylinks">Northwest              Missouri State University</a><br />            A midsized, public university located in Maryville, MO that offers            undergraduate and graduate programs.  I completed my Master's degree            here.<br />          </p>          <p><a href="http://www.doane.edu/" class="bodylinks">Doane University</a><br />            A small, private, liberal arts college located in Crete, NE offering            undergraduate degrees and a few select graduate programs.  This is            my alma mater....GO DOANE FORENSICS!!<br />          </p>          <br />          <h2 id="Contact"><a name="contact"></a><a href="#">Contact<br />            </a></h2>          <p>If you have any questions, comments, or would like to get in touch            with me, please feel free to send me an email using the following            form.<br />          </p>          <h4>Contact Form</h4>          <form method="POST" action="mail1.php"> <label>Name</label><input type="text"              name="name"              value="Your Name"              onclick="javascript:this.form.name.focus();this.form.name.select();" />            <label>Email</label><input type="text" name="email" value="Your Email"              onclick="javascript:this.form.email.focus();this.form.email.select();" />            <label>Subject</label><input type="text" name="subject" value="Subject"              onclick="javascript:this.form.subject.focus();this.form.subject.select();" />            <label>Your Message</label> <textarea cols="5" rows="5" name="message"></textarea>            <input type="submit" value="Send" /> <input type="reset" value="Clear" />          </form>        </div>        <div id="footer">          <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"                src="1_Images/psu_mark.jpg"                class="noborder"                style="width: 318px; height: 85px;" /></a><br />            © 2019 Neil Hatfield <br />          </div>        </div>      </div>    </div></body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en-us" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" dir="ltr">
+  <head>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
+    <title>Hatfield's Contact</title>
+    <link media="screen,projection" type="text/css" href="1_Scripts/neil.css" rel="stylesheet" />
+    <meta name="author" content="Neil Hatfield" />
+    <script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
+    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script> <meta content="Neil Hatfield" name="keywords" />
+  </head>
+  <body>
+    <div id="wrapper">
+      <div id="innerwrapper">
+        <div id="header">
+          <div align="center"><img class="noborder" alt="neilh" src="1_Images/hatfield.jpg"
+              style="width: 200px; height: 276px;" /></div>
+          <h1 style="text-align: center;">Neil J. Hatfield</h1>
+          <ul id="nav">
+            <li><a href="index.html"><em>About Me</em></a></li>
+            <li><a href="scholarlywork.html"><em>Scholarly Work</em></a></li>
+            <li><a href="teaching.html"><em>Teaching</em></a></li>
+            <li><a class="active" href="linkscontact.html"><em>Links/Contact</em></a></li>
+          </ul>
+        </div>
+        <div id="contentnobars">
+          <h2 id="Intro"><a name="links"></a><a href="#">Links</a></h2>
+          <p>Below are some websites that I have found to be particularly useful
+            at one time or another.  Please enjoy.<br />
+          </p>
+          <p><a href="https://www.causeweb.org/cause/" class="bodylinks" target="_blank">Consortium for the Advancement of Undersgraduate Statistics Education</a> <br /> A great resource for anyone looking to get more involved with statistics education and/or are looking for resources centered on statistics education.<br /></p>
+          <p><a href="http://nlvm.usu.edu/en/nav/category_g_4_t_2.html" class="bodylinks" target="_blank">National
+              Library of Virtual Manipulatives</a><br />
+            Utah State University (2010).  A site for online manipulatives.<br />
+          </p>
+          <p><a href="http://www.latex-project.org/ftp.html" class="bodylinks" target="_blank">LaTeX</a><br />
+            A great tool in preparing documents with embedded mathematics.<br />
+          </p>
+          <p><a href="http://www.pacifict.com/Products.html" class="bodylinks" target="_blank">Graphing
+              Calculator</a><br />
+            Pacific Tech.  This is a wonderfully powerful tool for creating
+            diadatic objects in mathematics classrooms.<br />
+          </p>
+          <p><a href="http://mathworld.wolfram.com/" class="bodylinks" target="_blank">Wolfram
+              Math World</a><br />
+            Eric W. Weisstein (2012). A constantly evolving mathematics
+            resource.<br />
+          </p>
+          <p><a href="https://stat.psu.edu/" class="bodylinks" target="_blank">Department of Statistics at Penn State</a><br />
+            My current department.<br />
+          </p>
+          <br />
+          <h2 id="Contact"><a name="contact"></a><a href="#">Contact<br />
+            </a></h2>
+          <p>If you have any questions, comments, or would like to get in touch
+            with me, please feel free to send me an email: <a href="https://stat.psu.edu/people/njh5464" class="bodylinks" target="_blank">PSU Contact Page</a>.<br />
+          </p>
+        </div>
+        <div id="footer">
+          <div align="center"><a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
+                src="1_Images/psu_mark.jpg"
+                class="noborder"
+                style="width: 318px; height: 85px;" /></a><br />
+            © 2019 Neil Hatfield <br />
+          </div>
+        </div>
+      </div>
+    </div>
+</body></html>
